...
  Widget build(BuildContext context) {
    double width = MediaQuery.of(context).size.width;
    double height = MediaQuery.of(context).size.height;
    return Scaffold(
      appBar: AppBar(
        centerTitle: true,
        title: Text('Add New Friend'),
      ),
      body: Container(
        color: Colors.white,
        //Color.fromRGBO(0,187,227, 1),
        padding: const EdgeInsets.fromLTRB(20, 0, 20, 0),
        child: ListView(
...
